--- a/src/styles/result.css
+++ b/src/styles/result.css
@@ -5,11 +5,11 @@
   appearance: none;
   text-decoration: none;
   display: block;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
-  border-radius: 16px;
+  /* box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25); */
+  /* border-radius: 16px; */
   transition: all 0.5s ease;
   &:hover {
-    box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.25); */
     text-decoration: none;
   }
   &-inner {
