--- a/src/styles/price-overview.css
+++ b/src/styles/price-overview.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   background-color: #fff;
-  @media screen and (max-width: 992px) {
+  @media screen and (max-width: 992px),  {
     flex-direction: column;
   }
   table {
@@ -103,3 +103,8 @@
 
   }
 }
+
+#bukazu-app > .bu-smaller > .price-overview {
+  width: 100%;
+}
+  
