--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,82 @@
-@import "calendar.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.bg-primary {
+  background-color: #f3f4f6;
+  background-color: var(--bukazu-button);
+}
+.disabled {
+  opacity: 0.5;
+}
+.booked {
+  background-color: #ea2b1f;
+  background-color: var(--bukazu-booked);
+  color: #000;
+  pointer-events: none;
+}
+.arrival {
+  background-color: #6eeb83;
+  background-color: var(--bukazu-arrival);
+  cursor: pointer;
+  font-weight: bold;
+  text-decoration: underline;
+}
+.discount {
+  background-color: orange;
+  background-color: var(--bukazu-discount);
+}
+.booked-departure {
+  background: linear-gradient(
+    45deg,
+    var(--bukazu-cell) 50%,
+    var(--bukazu-booked) 50%
+  );
+}
+.discount.booked-departure {
+  background: linear-gradient(
+    45deg,
+    var(--bukazu-discount) 50%,
+    var(--bukazu-booked) 50%
+  );
+}
+.departure.discount.booked-departure,
+.departure.booked-departure,
+.departure.booked {
+  background: linear-gradient(
+    45deg,
+    var(--bukazu-departure) 50%,
+    var(--bukazu-booked) 50%
+  );
+}
+.departure-arrival {
+  background: linear-gradient(
+    45deg,
+    var(--bukazu-booked) 50%,
+    var(--bukazu-arrival) 50%
+  ) !important;
+  cursor: pointer;
+}
+.discount.departure-arrival {
+  background: linear-gradient(
+    45deg,
+    var(--bukazu-booked) 50%,
+    var(--bukazu-discount) 50%
+  ) !important;
+}
+.discount.arrival.departure,
+.departure {
+  font-weight: bold;
+  background: yellow;
+  background: var(--bukazu-departure);
+  cursor: pointer;
+}
+.selected {
+  background: rgb(23, 190, 187) !important;
+  background: var(--bukazu-button) !important;
+}
+
+/* @import "calendar.css";
 @import "form.css";
 @import "field.css";
 @import "datepicker.css";
@@ -77,4 +155,4 @@
     box-shadow: 0px 2px 0 rgba(5,145,255,.1);
     border: solid 1px #f0f0f0;
   }
-}
+} */
