--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,15 +1,20 @@
-@import "calendar.css";
-@import "form.css";
-@import "field.css";
-@import "datepicker.css";
-@import "modal.css";
-@import "price-overview.css";
-@import "success.css";
-@import "result.css";
-@import "results.css";
-@import "filters.css";
-@import "pagination.css";
-@import "reviews.css";
+@import 'calendar.css';
+@import 'form.css';
+@import 'field.css';
+@import 'datepicker.css';
+@import 'modal.css';
+@import 'price-overview.css';
+@import 'success.css';
+@import 'result.css';
+@import 'results.css';
+@import 'filters.css';
+@import 'pagination.css';
+@import 'reviews.css';
+
+/* NEW Styling */
+@import 'flex.css';
+@import 'typography.css';
+/* NEW Styling */
 
 #bukazu-app {
   #search-page {
@@ -51,9 +56,14 @@
     background-image: linear-gradient(45deg, transparent 50%, gray 50%),
       linear-gradient(135deg, gray 50%, transparent 50%),
       linear-gradient(to right, #ccc, #ccc);
-    background-position: calc(100% - 20px) calc(1em),
-      calc(100% - 15px) calc(1em), calc(100% - 2.5em);
-    background-size: 5px 5px, 5px 5px, 1px 1.5em;
+    background-position:
+      calc(100% - 20px) calc(1em),
+      calc(100% - 15px) calc(1em),
+      calc(100% - 2.5em);
+    background-size:
+      5px 5px,
+      5px 5px,
+      1px 1.5em;
     background-repeat: no-repeat;
   }
   .info-button {
@@ -74,7 +84,19 @@
   .bu_card {
     background-color: #fefefe;
     border-radius: 6px;
-    box-shadow: 0px 2px 0 rgba(5,145,255,.1);
+    box-shadow: 0px 2px 0 rgba(5, 145, 255, 0.1);
     border: solid 1px #f0f0f0;
+  }
+  .bu_rounded-md {
+    border-radius: 0.375rem;
+  }
+  .bu_rounded-lg {
+    border-radius: 0.5rem;
+  }
+  .bu_text-center {
+    text-align: center;
+  }
+  .bu_shadow-xs {
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   }
 }
