--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -12,7 +12,8 @@
         order: 2;
         .calendar--picker {
           flex-direction: column;
-          &--date, .button {
+          &--date,
+          .button {
             width: auto;
           }
           .button {
@@ -22,19 +23,19 @@
       }
     }
   }
-  @media screen and (max-width: 993px) {    
-      .price-overview {
-        .calendar--picker {
-          flex-direction: column;
-          &--date, .button {
-            width: auto;
-          }
-          .button {
-            padding: 12px;
-          }
+  @media screen and (max-width: 993px) {
+    .price-overview {
+      .calendar--picker {
+        flex-direction: column;
+        &--date,
+        .button {
+          width: auto;
+        }
+        .button {
+          padding: 12px;
         }
       }
-    
+    }
   }
   .calendars-header {
     display: flex;
@@ -42,16 +43,17 @@
     justify-content: space-around;
     @media screen and (max-width: 992px) {
       /* flex-direction: column; */
-      .col, .bu-calendar-col {
+      .col,
+      .bu-calendar-col {
         margin: 4px 8px;
       }
     }
-    .col, .bu-calendar-col {
+    .col,
+    .bu-calendar-col {
       .icon {
         padding: 8px 40px;
         background-color: rgb(23, 190, 187);
         background: var(--bukazu-button);
-        box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.25);
         cursor: pointer;
         display: flex;
         align-items: center;
@@ -65,58 +67,29 @@
       }
     }
   }
-  .assistance {
-    padding: 16px;
-    span {
-      font-weight: bold;
-    }
-  }
   .calendars-row {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
   }
   .bu-smaller .calendar {
-      width: 100%;
-    }
-    .bu-smaller .calendar .col {
-      padding: 16px 4px;
-    }
-    .bu-smaller .calendar .bu-calendar-col {
-      padding: 16px 4px;
-    }
-  .bu-calendar, .calendar {
+    width: 100%;
+  }
+  .bu-smaller .calendar .col {
+    padding: 16px 4px;
+  }
+  .bu-smaller .calendar .bu-calendar-col {
+    padding: 16px 4px;
+  }
+  .bu-calendar,
+  .calendar {
     min-width: 48%;
     padding: 16px 1%;
     box-sizing: border-box;
     background: var(--month_background);
-    /* box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25); */
-    /* margin: 16px 8px; */
-    &.calendar-1 {
-      min-width: 98%;
-    }
-    &.calendar-2 {
-      min-width: 48%;
-    }
-    &.calendar-3 {
-      min-width: 32%;
-    }
-    &.calendar-4 {
-      min-width: calc(25% - 16px);
-    }
-    
-    .header {
-      background-color: rgba(211, 211, 211, 0.5);
-    }
-    .row, .bu-calendar-row {
-      width: 100%;
-      display: flex;
-      flex: 1 1 auto;
-      &.days {
-        border-bottom: 1px solid rgba(211, 211, 211, 0.5);
-      }
-    }
-    .col, .bu-calendar-col {
+
+    .col,
+    .bu-calendar-col {
       width: 100%;
       padding: 4px;
       text-transform: capitalize;
@@ -132,7 +105,7 @@
         text-align: right;
       }
     }
-    
+
     .cell {
       background: #6eeb83;
       background: var(--bukazu-cell);
@@ -259,7 +232,6 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
-    box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.25);
     &--date {
       width: 20%;
       display: flex;
@@ -272,8 +244,8 @@
         border-bottom: 1px solid #ccc;
         padding: 4px 0;
         @media screen and (max-width: 1200px) {
-    font-size: 16px;
-  }
+          font-size: 16px;
+        }
       }
       span.detail {
         display: flex;
@@ -282,9 +254,9 @@
         width: 100%;
         justify-content: center;
         align-items: center;
-                      @media screen and (max-width: 1200px) {
-                  font-size: 14px;
-                }
+        @media screen and (max-width: 1200px) {
+          font-size: 14px;
+        }
       }
     }
     &--persons {
@@ -293,7 +265,8 @@
       appearance: none;
       font-size: 16px;
     }
-    .button, .bu-calendar-button {
+    .button,
+    .bu-calendar-button {
       width: 20%;
       background: var(--bukazu-button_cta);
       color: #fff;
@@ -306,8 +279,8 @@
       box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.25);
       cursor: pointer;
       &:disabled {
-       background: #ccc;
-       cursor: not-allowed;
+        background: #ccc;
+        cursor: not-allowed;
       }
       &:hover {
         box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
