--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -16,10 +16,8 @@
     cursor: pointer;
     text-decoration: underline;
   }
-  > div {
-    /* flex: 1; */
-  }
-  .error-message, .bu-error-message {
+  .error-message,
+  .bu-error-message {
     position: relative;
     width: 100%;
     color: red;
@@ -36,16 +34,13 @@
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid #aeacac;
-    padding: 16px;
     .age-description {
       padding: 0 0 0 16px;
     }
   }
   &-sum {
-    padding: 16px;
     background: #fff;
     box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.25);
-    /* position: absolute; */
     top: 0;
     right: 10%;
     min-width: 400px;
@@ -165,7 +160,8 @@
     flex-direction: column;
     padding: 8px 0;
     select,
-    input, .bukazu-date-picker {
+    input,
+    .bukazu-date-picker {
       max-width: 50%;
       @media screen and (max-width: 992px) {
         max-width: 100%;
@@ -209,7 +205,7 @@
       }
     }
   }
-  
+
   .return-message {
     position: fixed;
     top: 20%;
