--- a/src/styles/reviews.css
+++ b/src/styles/reviews.css
@@ -1,5 +1,4 @@
 .bu_single_review {
-  padding: 16px;
   margin: 0 0 16px;
   & .bu_review_summary {
     display: flex;
@@ -21,10 +20,9 @@
   & .bu_criteria {
     columns: 2;
     & .bu-smaller {
-      columns: 1
+      columns: 1;
     }
   }
-
 }
 .bu_score {
   display: flex;
@@ -39,13 +37,13 @@
     margin: 0 8px 0 0;
     letter-spacing: 2px;
     &.low {
-      background-color: #006B3D !important;
+      background-color: #006b3d !important;
     }
     &.best {
       background-color: #135200 !important;
     }
   }
- 
+
   &__rating.medium {
     background-color: #069c56 !important;
   }
@@ -54,15 +52,12 @@
   }
 }
 .bu_reviews {
-  /* background-color: rgba(0, 0, 0, 0.02); */
-  padding: 16px;
   &__overview {
-    padding: 16px;
     background: linear-gradient(to right, #ece9e6, #ffffff) !important;
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  margin: 0 0 16px;
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    margin: 0 0 16px;
     &__number {
       font-size: 22px;
       padding: 0 16px;
